force-app/main/default/objects/ProgramacionDeAportaciones__c/fields/Aportacion_por_incremento_puntual__c.field-meta.xml
<CustomField>
    <fullName>Aportacion_por_incremento_puntual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aportacion por incremento puntual</label>
    <type>Checkbox</type>
</CustomField>