force-app/main/default/objects/ProgramacionDeAportaciones__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Programaciones de Aportaciones</relationshipLabel>
    <relationshipName>Programaciones_de_Aportaciones</relationshipName>
    <type>Lookup</type>
</CustomField>