force-app/main/default/objects/ProgramacionDeAportaciones__c/fields/Pedido_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Pedido_de_Compra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>PedidoDeCompra__c</referenceTo>
    <relationshipLabel>Input Schedules</relationshipLabel>
    <relationshipName>Input_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>