force-app/main/default/objects/ProgramacionDeAportaciones__c/fields/PlanificacionComercial__c.field-meta.xml
<CustomField>
    <fullName>PlanificacionComercial__c</fullName>
    <label>Planificación comercial</label>
    <referenceTo>PlanificacionComercial__c</referenceTo>
    <relationshipLabel>Aportaciones Programadas</relationshipLabel>
    <relationshipName>Programaciones_de_Aportaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>