force-app/main/default/objects/ProgramacionDeAportaciones__c/fields/UltimaModificacionPorOrigen__c.field-meta.xml
<CustomField>
    <fullName>UltimaModificacionPorOrigen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Última modificación por (origen)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Programaciones_de_Aportaciones_UltimaMod</relationshipName>
    <type>Lookup</type>
</CustomField>